--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-router": "^7.1.3",
     "react-router-dom": "^7.1.2",
-    "react-scripts": "5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-scroll": "^1.9.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --openssl-legacy-provider",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
